--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Tianguis</title>
+	<title>Al Tianguis</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="images/fav.ico" type="image/x-icon">
@@ -226,7 +226,6 @@
 						<div class="v3-mob-m-2">
 							<div class="v3-top-ri">
 								<ul
-									<li><a href="price.html" class="v3-add-bus"><i class="fa fa-plus" aria-hidden="true"></i> Agregar</a> </li>
 									<li><a href="#" class="ts-menu-5" id="v3-mob-menu-btn"><i class="fa fa-bars" aria-hidden="true"></i>Menu</a> </li>
 								</ul>
 							</div>
@@ -243,7 +242,7 @@
 				<li><a href="#!" data-toggle="modal" data-target="#register">Contactanos</a> </li>
 				<li><a href="#!" data-toggle="modal" data-target="#sign-in">Acerca de</a> </li>
 			</ul>
-			<h5>All Categories</h5>
+			<h5>Categorias</h5>
 			<ul>
 				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria </a> </li>
 				<li><a href="list.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Categoria  </a> </li>
@@ -264,7 +263,7 @@
 			<div class="row">
 				<div class="dir-hr1">
 					<div class="dir-ho-t-tit dir-ho-t-tit-2">
-						<h1>Tianguis</h1>
+						<h1>Al Tianguis</h1>
 						<p>Todas las eCommerce de Mexico en un solo lugar</p>
 					</div>
 						<form class="tourz-search-form">
@@ -275,7 +274,7 @@
 								<label for="select-search" class="search-hotel-type">Busca un producto o categoria</label>
 							</div>
 							<div class="input-field">
-								<input type="submit" value="search" class="waves-effect waves-light tourz-sear-btn"> </div>
+								<input type="submit" value="Buscar" class="waves-effect waves-light tourz-sear-btn"> </div>
 						</form>
 				</div>
 			</div>
@@ -286,8 +285,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="com-title">
-					<h2>Categorias y productos</h2>
-					<p>Encuentra todo lo que necesitas y filtralo por categorias</p>
+					<h2>Categorias</h2>
+					<p>Como que buscabas?</p>
 				</div>
 				<div class="cat-v2-hom-list">
 					<ul>
@@ -470,7 +469,7 @@
 									</div>
 									<div class="col-sm-4">
 										<h4>Direccion</h4>
-										<p>Corporativo Tianguis mx, Paseo Santa Fe Av 442, CP 4832, Ciudad de Mexico </p>
+										<p>Corporativo AlTianguis.mx, Paseo Santa Fe Av 442, CP 4832, Ciudad de Mexico </p>
 										<p> <span class="strong">Soporte:  </span> <span class="highlighted">+52 442 2162422</span> </p>
 									</div>
 									<div class="col-sm-5 foot-social">
@@ -499,7 +498,7 @@
 	<!--COPY RIGHTS-->
 	<section class="copy">
 		<div class="container">
-			<p>Tianguis MX  </p>
+			<p>AlTianguis </p>
 		</div>
 	</section>
 	<!--QUOTS POPUP-->
