--- a/index.html
+++ b/index.html
@@ -553,6 +553,21 @@
 						</span>
 					</span>
 			    </div><!-- /.column -->
+				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix print identity" data-my-order="6">
+					<div class="portfolio-image-holder"><img src="images/work/skull.png" alt="2" class="img-responsive portfolio-image"></div>
+					<span class="portfolio-badge badge">e-commerce listing site</span>
+					<span class="portfolio-hover">
+						<span>
+							<a href="https://github.com/luisxciv/pact-network" target="_blank">
+								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
+							</a>
+							<a href="images/work/2.jpg" class="zoom" title="Goodman's Burger">
+								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
+							</a>
+							<span class="project-title no-margin-bottom mt10">Tianguis.mx</span>
+						</span>
+					</span>
+				</div><!-- /.column -->
 			</div><!-- /.row -->
 		</div><!-- /.container -->
 	</section><!-- /.section -->
