--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 					<span class="portfolio-badge badge">e-commerce listing site</span>
 					<span class="portfolio-hover">
 						<span>
-							<a href="https://github.com/luisxciv/pact-network" target="_blank">
+							<a href="./projects/tianguis/index.html" target="_blank">
 								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
 							<a href="images/work/2.jpg" class="zoom" title="Goodman's Burger">
