--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 		<div class="container">
 			<div class="row mb30">
 				<div class="section-title col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 text-center">
-					<h2>La cuenta</h2>
+					<h2></h2>
 					<span class="section-divider mb15"></span>
 					<p class="no-margin">Lo que llevo en mi carrera de freelancer</p>
 				</div><!-- /.column -->
@@ -564,7 +564,7 @@
 							<a href="images/work/2.jpg" class="zoom" title="Goodman's Burger">
 								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
 							</a>
-							<span class="project-title no-margin-bottom mt10">Tianguis.mx</span>
+							<span class="project-title no-margin-bottom mt10">Re!gn</span>
 						</span>
 					</span>
 				</div><!-- /.column -->
