--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                             </div>
                             <div class="overflow-hidden">
                                 <div class="zopacity" data-zanim='{"delay":0.7}'>
-                                    <a class="btn btn-primary mr-3 mt-3" href="#">Mas
+                                    <a class="btn btn-primary mr-3 mt-3" href="#identidad">Mas
                                         <span class="fa fa-chevron-right ml-2"></span>
                                     </a>
-                                    <a class="btn btn-warning mt-3" href="contact.html">Contactanos
+                                    <a class="btn btn-warning mt-3" href="./contact.html">Contactanos
                                         <span class="fa fa-chevron-right ml-2"></span>
                                     </a>
                                 </div>
@@ -140,7 +140,7 @@
                 <!--/.container-->
             </section>
             <section class="background-white  text-center">
-                <div class="container">
+                <div id = "identidad" class="container">
                     <div class="row justify-content-center">
                         <div class="col-10 col-md-6">
                             <h3 class="color-primary fs-2 fs-lg-3">Quienes somos</h3>
@@ -172,7 +172,7 @@
                             </div>
                             <h5 class="mt-4" data-zanim='{"delay":0.1}'>Valores</h5>
                             <p class="mb-0 mt-3 px-3" data-zanim='{"delay":0.2}'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                <br/>/p>
+                                <br/></p>
                         </div>
                         <div class="col-sm-6 col-lg-3 mt-4" data-zanim-timeline='{"delay":0.1}' data-zanim-trigger="scroll">
                             <div class="background-11 border border-color-9 radius-round mx-auto d-flex align-items-center" data-zanim='{"trigger":"scroll"}' style="height:100px; width:100px;">
@@ -506,11 +506,11 @@
                                 <div class="row">
                                     <div class="col-6">
                                         <input class="form-control" type="hidden" name="to" value="username@domain.extension" />
-                                        <input class="form-control" type="text" placeholder="Your Name" aria-label="Text input with dropdown button" /> </div>
+                                        <input class="form-control" type="text" placeholder="Nombre" aria-label="Text input with dropdown button" /> </div>
                                     <div class="col-6">
-                                        <input class="form-control" type="text" placeholder="Phone Number" aria-label="Text input with dropdown button" /> </div>
+                                        <input class="form-control" type="text" placeholder="Numero Telefonico" aria-label="Text input with dropdown button" /> </div>
                                     <div class="col-6 mt-4">
-                                        <input class="form-control" type="text" placeholder="Subject" aria-label="Text input with dropdown button" /> </div>
+                                        <input class="form-control" type="text" placeholder="Asunto" aria-label="Text input with dropdown button" /> </div>
                                     <div class="col-6 mt-4">
                                         <button class="btn btn-warning btn-block" type="submit">Enviar</button>
                                     </div>
@@ -707,7 +707,7 @@
                             <p class="color-white lh-6 mb-0 fw-600">&copy; Copyright 2018</p>
                         </div>
                         <div class="col text-sm-right mt-3 mt-sm-0">
-                            <a class="color-white" href="https://themewagon.com/" target="_blank"> </a>
+                            <a class="color-white" href="" target="_blank"> </a>
                         </div>
                     </div>
                     <!--/.row-->
