Copyright, company creation

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                             </a>
                         </div>
                         <div class="col-sm-6 mt-3 mt-sm-0">
-                            <p class="color-white lh-6 mb-0 fw-600">&copy; Copyright 2018</p>
+                            <p class="color-white lh-6 mb-0 fw-600">&copy; Copyrighted to LTech, 2018 </p>
                         </div>
                         <div class="col text-sm-right mt-3 mt-sm-0">
                             <a class="color-white" href="" target="_blank"> </a>
