--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     <div class="row align-items-center">
                         <div class="col-auto d-none d-lg-block">
                             <span class="fa fa-map-marker color-warning fw-800 icon-position-fix"></span>
-                            <p class="ml-2 mb-0 fs--1 d-inline color-white fw-700">Direccion de empresa. </p>
+                            <p class="ml-2 mb-0 fs--1 d-inline color-white fw-700">Av. Constituyentes # </p>
                         </div>
                         <div class="col-auto ml-md-auto order-md-2 d-none d-sm-block">
                             <span class="fa fa-clock-o color-warning fw-800 icon-position-fix"></span>
-                            <p class="ml-2 mb-0 fs--1 d-inline color-white fw-700">Lun-Sab, 8.00-18.00. Domingo Cerradp</p>
+                            <p class="ml-2 mb-0 fs--1 d-inline color-white fw-700">Lun-Sab, 8.00-18.00. </p>
                         </div>
                         <div class="col-auto">
                             <span class="fa fa-phone color-warning fw-800 icon-position-fix"></span>
@@ -118,7 +118,7 @@
                     <div class="row h-full py-8 align-items-center" data-inertia='{"weight":1.5}'>
                         <div class="col-sm-8 col-lg-7">
                             <div class="overflow-hidden">
-                                <h1 class="fs-4 fs-md-5 zopacity" data-zanim='{"delay":0.5}'>RC Asesores</h1>
+                                <h1 class="fs-md-6 fs-md-5 zopacity" data-zanim='{"delay":0.5}'>RC Asesores</h1>
                             </div>
                             <div class="overflow-hidden">
                                 <p class="color-primary mt-4 mb-5 lh-2 fs-1 fs-md-2 zopacity" data-zanim='{"delay":0.6}'>Texto descriptivo 1 o slogan </p>
