Doc every change huh

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                         <h5 data-zanim='{"delay":0}'>Rodrigo Corona</h5>
                                     </div>
                                     <div class="overflow-hidden">
-                                        <h6 class="fw-400 color-7" data-zanim='{"delay":0.1}'>Asesor</h6>
+                                        <h6 class="fw-400 color-7" data-zanim='{"delay":0.1}'>Director</h6>
                                     </div>
                                     <div class="overflow-hidden">
                                         <p class="py-3 mb-0" data-zanim='{"delay":0.2}'> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</p>
