--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     <div class="row align-items-center">
                         <div class="col-auto d-none d-lg-block">
                             <span class="fa fa-map-marker color-warning fw-800 icon-position-fix"></span>
-                            <p class="ml-2 mb-0 fs--1 d-inline color-white fw-700">Av. Constituyentes # </p>
+                            <p class="ml-2 mb-0 fs--1 d-inline color-white fw-700">Calle de la Empresa #243343 </p>
                         </div>
                         <div class="col-auto ml-md-auto order-md-2 d-none d-sm-block">
                             <span class="fa fa-clock-o color-warning fw-800 icon-position-fix"></span>
-                            <p class="ml-2 mb-0 fs--1 d-inline color-white fw-700">Lun-Sab, 8.00-18.00. </p>
+                            <p class="ml-2 mb-0 fs--1 d-inline color-white fw-700">Horario: Lun-Sab, 8.00-18.00. </p>
                         </div>
                         <div class="col-auto">
                             <span class="fa fa-phone color-warning fw-800 icon-position-fix"></span>
@@ -252,7 +252,7 @@
                 <div class="container">
                     <div class="row mb-6">
                         <div class="col">
-                            <h3 class="text-center fs-2 fs-lg-3">Quienes Somos?</h3>
+                            <h3 class="text-center fs-2 fs-lg-3">Mision y Vision</h3>
                             <hr class="short" data-zanim='{"from":{"opacity":0,"width":0},"to":{"opacity":1,"width":"4.20873rem"},"duration":0.8}' data-zanim-trigger="scroll"> </div>
                     </div>
                     <div class="row">
