--- a/contacto.html
+++ b/contacto.html
@@ -31,6 +31,7 @@
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
         <link href="assets/lib/hamburgers/dist/hamburgers.min.css" rel="stylesheet">
         <link href="assets/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="assets/lib/jquery.mb.ytplayer/dist/css/jquery.mb.YTPlayer.min.css" rel="stylesheet">
         <!-- Main stylesheet and color file-->
         <link href="assets/css/style.css" rel="stylesheet">
         <link href="assets/css/custom.css" rel="stylesheet"> </head>
@@ -107,7 +108,7 @@
             </div>
             <section>
                 <div>
-                    <div class="background-holder" style="background-image:url(http://img.youtube.com/vi/hPCotoawhk0/maxresdefault.jpg);">
+                    <div class="background-holder" style="background-image:url(assets/images/mexico.png">
                         <div class="youtube-background" data-property='{"videoURL":"https://www.youtube.com/watch?v=z7yqtW4Isec","startAt":15,mute:true}'></div>
                     </div>
                     <!--/.background-holder-->
