--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                             </div>
                             <div class="overflow-hidden">
                                 <div class="zopacity" data-zanim='{"delay":0.7}'>
-                                    <a class="btn btn-primary mr-3 mt-3" href="#identidad">Mas
+                                    <a class="btn btn-primary mr-3 mt-3" href="#identidad">Más
                                         <span class="fa fa-chevron-right ml-2"></span>
                                     </a>
-                                    <a class="btn btn-warning mt-3" href="./contact.html">Contactanos
+                                    <a class="btn btn-warning mt-3" href="./contacto.html">Contáctanos
                                         <span class="fa fa-chevron-right ml-2"></span>
                                     </a>
                                 </div>
@@ -241,7 +241,7 @@
                                 <br class="d-md-none" />24/7</h4>
                         </div>
                         <div class="col-md-auto mt-md-0 mt-4">
-                            <a class="btn btn-white btn-capsule" href="contact.html">Ponte en Contacto</a>
+                            <a class="btn btn-white btn-capsule" href="contact.html">Esribenos</a>
                         </div>
                     </div>
                     <!--/.row-->
@@ -252,7 +252,7 @@
                 <div class="container">
                     <div class="row mb-6">
                         <div class="col">
-                            <h3 class="text-center fs-2 fs-lg-3">Mision y Vision</h3>
+                            <h3 class="text-center fs-2 fs-lg-3">Misión y Visión</h3>
                             <hr class="short" data-zanim='{"from":{"opacity":0,"width":0},"to":{"opacity":1,"width":"4.20873rem"},"duration":0.8}' data-zanim-trigger="scroll"> </div>
                     </div>
                     <div class="row">
@@ -340,7 +340,7 @@
                                         <h5 data-zanim='{"delay":0}'>Rodrigo Corona</h5>
                                     </div>
                                     <div class="overflow-hidden">
-                                        <h6 class="fw-400 color-7" data-zanim='{"delay":0.1}'>Director</h6>
+                                        <h6 class="fw-400 color-7" data-zanim='{"delay":0.1}'>Directór</h6>
                                     </div>
                                     <div class="overflow-hidden">
                                         <p class="py-3 mb-0" data-zanim='{"delay":0.2}'> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</p>
@@ -387,7 +387,7 @@
             </section>
             <section class="background-11">
                 <div class="container">
-                    <h3 class="text-center fs-2 fs-md-3">Integrate a nuestro equipo</h3>
+                    <h3 class="text-center fs-2 fs-md-3">Intégrate a nuestro equipo</h3>
                     <hr class="short" data-zanim='{"from":{"opacity":0,"width":0},"to":{"opacity":1,"width":"4.20873rem"},"duration":0.8}' data-zanim-trigger="scroll" />
                     <div class="row no-gutters pos-relative mt-6">
                         <div class="elixir-caret d-none d-lg-block"></div>
@@ -492,7 +492,7 @@
                         </div>
                         <div class="col-sm-6 col-lg-4 px-4 px-sm-3 mt-4 mt-lg-0 text-lg-x" data-zanim-timeline="{}" data-zanim-trigger="scroll">
                             <h5 data-zanim='{"delay":0}'>
-                                <span class="ion-android-call color-primary mr-3"></span>Marcale a alguien</h5>
+                                <span class="ion-android-call color-primary mr-3"></span>Comunicacion</h5>
                             <p class="mt-3 pr-3 pr-lg-5 mb-0" data-zanim='{"delay":0.1}'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</p>
                         </div>
                     </div>
@@ -539,7 +539,7 @@
                             </div>
                         </div>
                         <div class="col-lg-8 pl-lg-5 mt-6 mt-lg-0">
-                            <h5 class="color-white">Me gustaria hablar de:</h5>
+                            <h5 class="color-white">Me gustaría hablar de:</h5>
                             <form class="zform mt-4" method="post">
                                 <div class="row">
                                     <div class="col-6">
