--- a/contacto.html
+++ b/contacto.html
@@ -84,18 +84,11 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav fs-0 fw-700">
                                 <li>
-                                    <a href="JavaScript:void(0)">Inicio</a>
-                                    <ul class="dropdown fs--1">
-                                        <li>
-                                            <a href="index.html">Inicio</a>
-                                        </li>
-
-                                    </ul>
+                                    <a href="./index.html">Inicio</a>
                                 </li>
                                 <li>
-                                    <a href="JavaScript:void(0)">Acerca</a>
-                                    <ul class="dropdown fs--1">
-                                    </ul>
+                                    <a href="./about.html">Acerca</a>
+
                                 </li>
                             </ul>
                             <ul class="navbar-nav ml-lg-auto">
