--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                     <a href="">Inicio</a>
                                 </li>
                                 <li>
-                                    <a href="">Nosotros</a>
+                                    <a href="">Acerca</a>
                                 </li>
                                 <li>
                                     <a href="">Integrate</a>
@@ -102,7 +102,7 @@
                                     <a href="">Asesores</a>
                                 </li>
                                 <li>
-                                    <a class="d-block mr-md-9" href="contact.html">Contactanos</a>
+                                    <a class="d-block mr-md-9" href="contacto.html">Contactanos</a>
                                 </li>
                             </ul>
                         </div>
