--- a/about.html
+++ b/about.html
@@ -107,7 +107,6 @@
                         <div class="row pt-6" data-inertia='{"weight":1.5}'>
                             <div class="col-md-8 px-md-0 color-white" data-zanim-timeline="{}" data-zanim-trigger="scroll">
                                 <div class="overflow-hidden">
-                                    <h1 class="color-white fs-4 fs-md-5 mb-0 zopacity" data-zanim='{"delay":0}'>Nosotros</h1>
                                     <div class="nav zopacity" aria-label="breadcrumb" role="navigation" data-zanim='{"delay":0.1}'>
                                         <ol class="breadcrumb fs-1 pl-0 fw-700">
                                             <li class="breadcrumb-item">
@@ -126,38 +125,20 @@
             </section>
             <section class="background-11">
                 <div class="container">
-                    <div class="row no-gutters">
-                        <div class="col-lg-4 py-3 py-lg-0" style="min-height:400px; background-position: top;">
-                            <div class="background-holder radius-tl-secondary radius-bl-lg-secondary radius-tr-secondary radius-tr-lg-0" style="background-image:url(assets/images/ceo.jpg);"> </div>
-                            <!--/.background-holder-->
-                        </div>
-                        <div class="col-lg-8 px-5 py-6 my-lg-0 background-white radius-tr-lg-secondary radius-br-secondary radius-bl-secondary radius-bl-lg-0">
-                            <div class="d-flex align-items-center h-100">
-                                <div data-zanim-timeline="{}" data-zanim-trigger="scroll">
-                                    <h5 data-zanim='{"delay":0}'>Mensaje del Director</h5>
-                                    <p class="my-4" data-zanim='{"delay":0.1}'>Lorem ipsum dolor sit amet, eum an tota novum debitis. Mel et aliquam fierent. Cu falli populo epicurei vim, malis saperet apeirian in eos. </p>
-                                    <img data-zanim='{"delay":0.2}'
-                                        src="assets/images/signature.png" alt="" />
-                                    <h5 class="text-uppercase mt-3 fw-500 mb-1" data-zanim='{"delay":0.3}'>Rodrigo Corona</h5>
-                                    <h6 class="color-7 fw-600" data-zanim='{"delay":0.4}'>Director</h6>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="row mt-6">
                         <div class="col">
                             <h3 class="text-center fs-2 fs-md-3">Acerca de Nosotros</h3>
                             <hr class="short" data-zanim='{"from":{"opacity":0,"width":0},"to":{"opacity":1,"width":"4.20873rem"},"duration":0.8}' data-zanim-trigger="scroll" /> </div>
                         <div class="col-12">
                             <div class="background-white px-3 mt-6 px-0 py-5 px-lg-5 radius-secondary">
-                                <h5>Asegurando </h5>
-                                <p class="mt-3">Lorem ipsum dolor sit amet, eum an tota novum debitis. Mel et aliquam fierent. Cu falli populo epicurei vim, malis saperet apeirian in eos. Altera insolens deterruisset has ex</p>
+
+                                <p class="mt-3"></p>
                                 <blockquote class="blockquote my-5 ml-lg-6" style="max-width: 700px;">
-                                    <h5 class="fw-500 ml-3 mb-0">Lorem ipsum dolor sit amet, eum an tota novum debitis. Mel et aliquam fierent. Cu falli populo epicurei vim...</h5>
+                                    <h5 class="fw-500 ml-3 mb-0">Nos enfocamos en asesorar y a nuestros clientes para diseñar el producto que mejor se adapte a sus necesidades más claras y definidas, desde su conceptualización hasta su ejecución.
+                                    </h5>
                                 </blockquote>
-                                <p class="column-lg-2 dropcap">Populo lobortis mel id, melius integre eos ex. Ius ei odio rationibus. Ad diceret dissentiet ius. Fugit tractatos maluisset per no, ad his quis splendide, vel ei euripidis repudiandae.
-                                    Novum quaeque adolescens eu duo, ea quando feugait mea, eu eam delectus voluptaria. No pro sonet congue iriure. Option accusamus has cu. Sea labore facilisi adolescens in, ut hendrerit adipiscing eum.
-                                    Assum commodo in sit, mel ea choro utinam..</p>
+                                <p class="column-lg-2 dropcap">En RC Asesores dejamos atrás la idea de que el vendedor de seguros es una persona sin empleo o bien que no ha ejercido con éxito su profesión, que toca de puerta en puerta buscando vender una póliza para poder cobrar una comisión, te invitamos a conocer  nuestra visión empresarial, queremos que te sumes a la tarea de profesionalizar y formalizar la venta de seguros, convirtiéndola a partir de ahora en la honorable comercialización de soluciones financieras que se adaptan a las exigencias más arduas y delicadas que presentan nuestros clientes. Es buscar por medio de la observación cuidadosa y la atención meticulosa conocer a detalle las necesidades primarias para así poder ofrecer servicios y productos de calidad que les ayuden a resolver sus inquietudes fundamentales… convirtiéndote de un agente de seguros a un consultor profesional de las relaciones interpersonales que ofrece servicios estudiados, dúctiles, exitosos y probados con la experiencia.
+                                </p>
                             </div>
                         </div>
                     </div>
