--- a/contacto.html
+++ b/contacto.html
@@ -101,7 +101,7 @@
             </div>
             <section>
                 <div>
-                    <div class="background-holder" style="background-image:url(assets/images/travel.jpg">
+                    <div class="background-holder" style="background-image:url(assets/images/background-2.jpg">
                         <div class="youtube-background" data-property='{"videoURL":"https://www.youtube.com/watch?v=z7yqtW4Isec","startAt":15,mute:true}'></div>
                     </div>
                     <!--/.background-holder-->
