updates pagina web

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <hr class="short" data-zanim='{"from":{"opacity":0,"width":0},"to":{"opacity":1,"width":"4.20873rem"},"duration":0.8}' data-zanim-trigger="scroll"> </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6 col-lg-4">
+                        <div class="col-sm-6 col-lg-6 align-self-lg-start">
                             <div class="background-white pb-4 h-100 radius-secondary">
                                 <img class="mb-4 radius-tr-secondary radius-tl-secondary" src="assets/images/portrait-3.jpg" alt="Profile Picture" />
                                 <div class="px-4" data-zanim-timeline="{}" data-zanim-trigger="scroll">
@@ -340,9 +340,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-4 mt-4 mt-sm-0">
-                        </div>
-                        <div class="col-sm-6 col-lg-4 mt-4 mt-sm-0">
+                        <div class="col-sm-6 col-lg-6 mt-4 mt-sm-0">
                             <div class="background-white pb-4 h-100 radius-secondary">
                                 <img class="mb-4 radius-tr-secondary radius-tl-secondary" src="assets/images/portrait-4.jpg" alt="Profile Picture" />
                                 <div class="px-4" data-zanim-timeline="{}" data-zanim-trigger="scroll">
@@ -363,6 +361,7 @@
 
                         <!--/.row-->
                     </div>
+                </div>
                     <!--/.container-->
             </section>
             <section class="background-11" id="perfiles">
@@ -383,17 +382,16 @@
                                     </div>
                                     <div class="overflow-hidden">
                                         <p class="mt-3" data-zanim='{"delay":0.1}'>
-                                            Profesionista con cedula profesional<br>
-                                            Talento extraordinario en negociación.<br>
-                                            -Conectar con el cliente por medio de la comunicación asertiva.<br>
-                                            -Apertura a las nuevas tendencias del mercado.<br>
-                                            -Flexibilidad y disposición para ponerse al servicio del cliente.<br>
-                                            -Deseo genuino por el triunfo personal y colectivo.<br>
-                                            -Lector ávido y estudioso.<br>
-                                            -Interesado en proyectar una imagen exitosa y victoriosa.<br>
-                                            -Paciente, leal, despierto, agudo, descarado.<br>
-                                            -Experiencia en ventas.<br>
-
+                                            - Profesionista con cedula profesional<br>
+                                            - Talento extraordinario en negociación.<br>
+                                            - Conexión con el cliente por medio de la comunicación asertiva.<br>
+                                            - Apertura a las nuevas tendencias del mercado.<br>
+                                            - Flexibilidad y disposición para ponerse al servicio del cliente.<br>
+                                            - Deseo genuino por el triunfo personal y colectivo.<br>
+                                            - Lector ávido y estudioso.<br>
+                                            - Interesado en proyectar una imagen exitosa y victoriosa.<br>
+                                            - Paciente, leal, despierto, agudo, descarado.<br>
+                                            - Experiencia en ventas.<br>
 
                                         </p>
                                     </div>
@@ -414,7 +412,7 @@
                                         <h5 data-zanim='{"delay":0}'>Desarrollador </h5>
                                     </div>
                                     <div class="overflow-hidden">
-                                        <p class="mt-3" data-zanim='{"delay":0.1}'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                                        <p class="mt-3" data-zanim='{"delay":0.1}'>Perfiles de desarrollador
                                             </p>
                                     </div>
                                 </div>
@@ -515,7 +513,7 @@
                                     <div class="col-md-9 ml-auto mt-4 mt-md-0 px-4 px-sm-3">
                                         <p class="lead fw-400">"Ganar sin riesgo,
                                             es triunfar sin gloria."</p>
-                                        <h6 class="fs-0 mb-1 mt-4">-Pierre corneille</h6>
+                                        <h6 class="fs-0 mb-1 mt-4">-Rodrigo Corona</h6>
                                         <p class="mb-0 color-7"></p>
                                     </div>
                                 </div>
@@ -524,10 +522,8 @@
                                         <img class="radius-secondary mx-auto" src="assets/images/client2.png" alt="Member" style="width: auto;" />
                                     </div>
                                     <div class="col-md-9 ml-auto mt-4 mt-md-0 px-4 px-sm-3">
-                                        <p class="lead fw-400">"¿CÓMO VA TU DÍA?
-                                            MAL, REDIRIGE,
-                                            BIEN, CONFÍA"</p>
-                                        <h6 class="fs-0 mb-1 mt-4">-FERNANDO CORONA</h6>
+                                        <p class="lead fw-400">"¿Cómo va tu día? Mal, Redirige, Bien, Confía"</p>
+                                        <h6 class="fs-0 mb-1 mt-4">-Fernando Corona</h6>
                                         <p class="mb-0 color-7"></p>
                                     </div>
                                 </div>
@@ -538,7 +534,7 @@
                                     <div class="col-md-9 ml-auto mt-4 mt-md-0 px-4 px-sm-3">
                                         <p class="lead fw-400">"Haz un cliente,
                                             no una venta"</p>
-                                        <h6 class="fs-0 mb-1 mt-4">Catherine Barchetti</h6>
+                                        <h6 class="fs-0 mb-1 mt-4">-Rodrigo Corona</h6>
                                         <p class="mb-0 color-7"></p>
                                     </div>
                                 </div>
