--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2 class="wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">Frequently Asked Questions</h2>
-                    <p class="wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".6s">We are proud to be a awesome theam. They are really awespme people with their good knoledge.</p>
+                    <h2 class="wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">Preguntas Frecuentes</h2>
+                    <p class="wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".6s">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
             </div>
         </div>    
